src/test/deca/context/invalid/intermediaire2/elseif/04condition_readfloat.deca
{
    if (3 < 2) {
        print("Trop petit !");
    } else if ( readFloat() ){
        print("Trop grand !");
    }
}